--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
 	"author": "Dee Clawson",
 	"license": "MIT",
 	"dependencies": {
-		"webpack": "^4.12.x"
-	},
-	"devDependencies": {
+		"webpack": "^4.12.x",
 		"webpack-dev-middleware": "^3.1.x",
 		"webpack-hot-middleware": "^2.22.x"
+	},
+	"devDependencies": {
 	},
 	"sails": {
 		"isHook": true,
