--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
 		"webpack-dev-middleware": "^3.1.x",
 		"webpack-hot-middleware": "^2.22.x"
 	},
-	"devDependencies": {
-	},
+	"devDependencies": {},
 	"sails": {
 		"isHook": true,
 		"hookName": "webpackmiddleware"
