--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "sails-hook-webpackmiddleware",
-	"version": "0.0.4",
-	"description": "A sails hook to use webpack, webpack dev middleware, and webpack hot middleware.",
+	"version": "0.1.0",
+	"description": "A sails hook to use webpack dev middleware, and webpack hot middleware.",
 	"main": "index.js",
 	"scripts": {
 		"test": "mocha test"
@@ -21,7 +21,7 @@
 	"author": "Dee Clawson",
 	"license": "MIT",
 	"dependencies": {
-		"webpack": "^4.12.x",
+		"webpack": "^4.14.x",
 		"webpack-dev-middleware": "^3.1.x",
 		"webpack-hot-middleware": "^2.22.x"
 	},
