logging fix and peer dependency
Added dependency to sails v1 (fixes #2), this project will not support .12 sails. Added in captains log to mirror sails logging.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sails-hook-webpackmiddleware",
-	"version": "0.1.1",
+	"version": "0.1.2",
 	"description": "A sails hook to use webpack dev middleware, and webpack hot middleware.",
 	"main": "index.js",
 	"scripts": {
@@ -21,11 +21,14 @@
 	"author": "Dee Clawson",
 	"license": "MIT",
 	"dependencies": {
+		"captains-log": "^2.0.x",
 		"webpack": "^4.15.x",
 		"webpack-dev-middleware": "^3.1.x",
 		"webpack-hot-middleware": "^2.22.x"
 	},
-	"devDependencies": {},
+	"peerDependencies": {
+		"sails": "^1.x.x"
+	},
 	"sails": {
 		"isHook": true,
 		"hookName": "webpackmiddleware"
