--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,13 @@
 {
 	"env": {
+		"es6": true,
 		"node": true
 	},
 	"parserOptions": {
 		"ecmaVersion": 6,
 		"sourceType": "module",
 		"allowImportExportEverywhere": false,
-		"codeFrame": false,
-		"ecmaFeatures": {
-			"jsx": true,
-			"experimentalObjectRestSpread": true
-		}
+		"codeFrame": false
 	},
 	"extends": [
 		"eslint:recommended"
@@ -18,10 +15,39 @@
 	"rules": {
 		"strict": 0,
 		"comma-dangle": 1,
-		"indent": ["warn","tab"],
+		"indent": [
+			"warn",
+			"tab"
+		],
 		"no-tabs": 0,
 		"no-console": "warn",
 		"no-unused-vars": "warn",
-		"eqeqeq": "warn"
+		"eqeqeq": "warn",
+		"quotes": [
+			"warn",
+			"single",
+			{
+				"allowTemplateLiterals": true
+			}
+		],
+		"quote-props": [
+			"error",
+			"consistent-as-needed",
+			{
+				"keywords": true,
+				"numbers": true,
+				"unnecessary": true
+			}
+		],
+		"key-spacing": [
+			"warn",
+			{
+				"afterColon": true
+			}
+		],
+		"eol-last": [
+			"error",
+			"always"
+		]
 	}
 }
