--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sails-hook-webpackmiddleware",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"description": "A sails hook to use webpack dev middleware, and webpack hot middleware.",
 	"main": "index.js",
 	"keywords": [
@@ -19,9 +19,12 @@
 	"license": "MIT",
 	"dependencies": {
 		"captains-log": "^2.0.x",
-		"webpack": "^4.15.x",
+		"webpack": "^4.16.x",
 		"webpack-dev-middleware": "^3.1.x",
 		"webpack-hot-middleware": "^2.22.x"
+	},
+	"scripts": {
+		"lint": "eslint . --ext=js,jsx --fix;  exit 0"
 	},
 	"peerDependencies": {
 		"sails": "^1.x.x"
