--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sails-hook-webpackmiddleware",
-	"version": "1.1.0",
+	"version": "1.1.1",
 	"description": "A sails hook to use webpack dev middleware, and webpack hot middleware.",
 	"main": "index.js",
 	"keywords": [
@@ -33,6 +33,9 @@
 		"hookName": "webpackmiddleware"
 	},
 	"optionalDependencies": {
-		"eslint": "^5.1.x"
+		"babel-eslint": "^8.2.x",
+		"eslint": "^5.2.x",
+		"eslint-config-earthrocker": "^1.1.x",
+		"eslint-plugin-react": "^7.10.x"
 	}
 }
